Fix vertical alignment of issues in date index

--- a/assets/css/all.sass
+++ b/assets/css/all.sass
@@ -57,3 +57,8 @@ a
 .question
   font-size: 1.2em
   font-weight: bold
+
+.month
+  margin-top: 0.4em
+  margin-bottom: 0.4em
+  color: #606060
